[gd_scene load_steps=3 format=3 uid="uid://bki0spsulrllw"]

[ext_resource type="Script" path="res://src/main/common/classes/base_weapons/turret.gd" id="1_hmg1o"]
[ext_resource type="Script" path="res://src/main/common/classes/StateMachine.gd" id="2_jc7ny"]

[node name="turret" type="Node2D" groups=["turrets"]]
script = ExtResource("1_hmg1o")

[node name="Graphics" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Marker2D" type="Marker2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AttackWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_jc7ny")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
